--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
+# backports.zoneinfo==0.2.1
 Django==4.2.5
-django-background-tasks==1.2.5
+# django-background-tasks==1.2.5
 django-compat==1.0.15
-django-rename-app==0.1.6
-et-xmlfile==1.1.0
+# django-rename-app==0.1.6
+# et-xmlfile==1.1.0
 numpy==1.24.4
 openpyxl==3.1.2
 pandas==2.0.3
-python-dateutil==2.8.2
-pytz==2023.3.post1
-six==1.16.0
+# python-dateutil==2.8.2
+# pytz==2023.3.post1
+# six==1.16.0
 sqlparse==0.4.4
-typing-extensions==4.7.1
-tzdata==2023.3
+# tzdata==2023.3
